create-ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  Launch EC2 instance with Amazon Linux 2 and install NGINX via UserData.

Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to SSH into the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be the name of an existing EC2 KeyPair.

  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t3.micro
    AllowedValues:
      - t3.micro
      - t3.medium
    ConstraintDescription: Must be a valid EC2 instance type (t3.micro or t3.medium)

Mappings:
  RegionMap:
    us-east-1:
      AMI: ami-0c2b8ca1dad447f8a
    us-west-2:
      AMI: ami-0efdf839508ec2995
    eu-west-1:
      AMI: ami-07d02ee1eeb0c996c

Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref KeyName
      InstanceType: !Ref InstanceType
      ImageId: !FindInMap 
        - RegionMap
        - !Ref "AWS::Region"
        - AMI
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      UserData: 
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          amazon-linux-extras install nginx1 -y
          systemctl enable nginx
          systemctl start nginx
          ls

Outputs:
  InstanceId:
    Description: EC2 instance ID
    Value: !Ref EC2Instance

  PublicDNS:
    Description: Public DNS name
    Value: !GetAtt EC2Instance.PublicDnsName

  WebUrl:
    Description: Access your NGINX site via HTTP
    Value: !Sub http://${EC2Instance.PublicDnsName}
